--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,8 +10,8 @@
             ]
         }
     },
-    "folders": {
-
+    "containerEnv": {
+        "DISPLAY": "host.docker.internal:0"
     },
     "postCreateCommand": "pip install -r requirements.txt"
 }
