--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,8 +10,12 @@
             ]
         }
     },
-    "containerEnv": {
-        "DISPLAY": "host.docker.internal:0"
+    "forwardPorts": [19916],
+    "portsAttributes": {
+        "19916": {
+            "label": "GlvisStream",
+            "onAutoForward": "notify"
+        }
     },
     "postCreateCommand": "pip install -r requirements.txt"
 }
